fix  align-items: center

--- a/src/components/Contacts/styles.module.css
+++ b/src/components/Contacts/styles.module.css
@@ -10,6 +10,7 @@
   color: blue;
   display: flex;
   gap: 44px;
+  align-items: center;
 }
 .contactName {
   font-weight: 500;
